# MCAI

./: .env.mac.example  .env.surface.example  .gitignore  BUILD_EAGLER_CLIENT.cmd  BUILD_EAGLER_CLIENT.ps1  README.md  START_MCAI.cmd  STOP_MCAI.cmd  WATCH_TRAINING.cmd  config.windows.example.ps1
dashboard/: server.mjs
docs/: ARCHITECTURE.md  EAGLER.md  SAFETY.md  TRAINING.md
eagler-mod/: build.mjs  coordinate-contract.js  flat-policy.js  mcai.mod.js  package.json
models/: README.md  mcai-v3098-adaptive-reward.json  mcai-v3098-full.json  mcai-v3098-full.pt  mcai-v3098-league.json
protocol/: README.md
scripts/: EVALUATION.md  arena_control.py  bootstrap-mac.sh  bootstrap-surface.sh  bootstrap-windows.ps1  capture-spectator.mjs  (+16 more)
trainer/: pyproject.toml
trainer/benchmarks/: benchmark_league_batch.py  benchmark_learner_threads.py  profile_inference_components.py
trainer/combat_ai/: __init__.py  adaptive_rewards.py  browser_bridge.py  buffer.py  checkpoint.py  cli.py  config.py  curriculum.py  distribution.py  elite_replay.py  evaluation.py  export.py  features.py  imitation.py  league.py  model.py  ppo.py  reward_shaping.py  service.py
trainer/tests/: fixtures.py  test_adaptive_rewards.py  test_buffer_continuity.py  test_checkpoint.py  test_curriculum.py  test_distribution_numerics.py  test_elite_replay.py  test_evaluation.py  test_features.py  test_imitation.py  test_league.py  test_model.py  test_ppo.py  test_ppo_minibatch_packing.py  test_protocol_schema.py  test_reward_shaping.py  test_rewards.py  test_service_actor_learner.py  test_service_execution.py
(+96 files in other folders)
